fix: center align category and show elements by adding auto margins

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -292,6 +292,7 @@ h1.bg-secondary {
 #category,
 #show {
     background-color: #d1c6aef7;
+    margin: 0 auto;
 }
 
 hr {
